smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/doc-targets/docs-on-namespace.smithy
// Parse error at line 2, column 1 near `/// Invalid docs!`: Documentation cannot be applied to `namespace`
/// Invalid docs!
namespace foo.baz
